# bash-skills-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/bash_skills_agent/: __init__.py  agent.py  prompt.py  utils.py
src/bash_skills_agent/callbacks/: __init__.py  context_injection.py  file_processing.py
src/bash_skills_agent/config/: settings.py  shared_clients.py
src/bash_skills_agent/container/: __init__.py  manager.py
src/bash_skills_agent/skills/edit-docx/: SKILL.md
src/bash_skills_agent/skills/edit-docx/scripts/: analyze_docx.py  apply_edits.py  create_docx.py  generate_run_prompts.py  repack_docx.py  validate_edits.py
src/bash_skills_agent/skills/edit-docx/scripts/validation/: validate_docx.py  validate_edits.py
src/bash_skills_agent/skills/nano-pdf/: SKILL.md
src/bash_skills_agent/skills/sample-skill/: SKILL.md
src/bash_skills_agent/sub_agents/: __init__.py
src/bash_skills_agent/sub_agents/greeter/: __init__.py  agent.py  prompt.py
src/bash_skills_agent/tools/: __init__.py  bash.py  file_tools.py  sample_tool.py  skill_tool.py  todo.py  web_fetch.py  web_search.py
